--- a/method_list.html
+++ b/method_list.html
@@ -190,8 +190,24 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine.html#encode-class_method" title="Synvert::Core::Engine.encode (method)">encode</a></span>
+      <small>Synvert::Core::Engine</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#encode-class_method" title="Synvert::Core::Engine::Erb.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine/Haml.html#encode-class_method" title="Synvert::Core::Engine::Haml.encode (method)">encode</a></span>
+      <small>Synvert::Core::Engine::Haml</small>
     </div>
   </li>
   
@@ -238,13 +254,37 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine.html#generate_transform_proc-class_method" title="Synvert::Core::Engine.generate_transform_proc (method)">generate_transform_proc</a></span>
+      <small>Synvert::Core::Engine</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#generate_transform_proc-class_method" title="Synvert::Core::Engine::Erb.generate_transform_proc (method)">generate_transform_proc</a></span>
+      <small>Synvert::Core::Engine::Erb</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine/Haml.html#generate_transform_proc-class_method" title="Synvert::Core::Engine::Haml.generate_transform_proc (method)">generate_transform_proc</a></span>
+      <small>Synvert::Core::Engine::Haml</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#glob-class_method" title="Synvert::Core::Utils.glob (method)">glob</a></span>
       <small>Synvert::Core::Utils</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#goto_node-instance_method" title="Synvert::Core::Rewriter::Instance#goto_node (method)">#goto_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -252,7 +292,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#group-instance_method" title="Synvert::Core::Rewriter#group (method)">#group</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -260,7 +300,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper-instance_method" title="Synvert::Core::Rewriter#helper (method)">#helper</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -268,7 +308,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper_method-instance_method" title="Synvert::Core::Rewriter#helper_method (method)">#helper_method</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -276,7 +316,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helpers-instance_method" title="Synvert::Core::Rewriter#helpers (method)">#helpers</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -284,7 +324,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_exist_node (method)">#if_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -292,7 +332,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_gem-instance_method" title="Synvert::Core::Rewriter#if_gem (method)">#if_gem</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -300,7 +340,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_only_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_only_exist_node (method)">#if_only_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -308,7 +348,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_ruby-instance_method" title="Synvert::Core::Rewriter#if_ruby (method)">#if_ruby</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -316,7 +356,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#initialize-instance_method" title="Synvert::Core::Rewriter#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -324,7 +364,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Scope.html#initialize-instance_method" title="Synvert::Core::Rewriter::Scope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Scope</small>
@@ -332,7 +372,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Warning.html#initialize-instance_method" title="Synvert::Core::Rewriter::Warning#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Warning</small>
@@ -340,7 +380,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#initialize-instance_method" title="Synvert::Core::Rewriter::GemSpec#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -348,7 +388,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#initialize-instance_method" title="Synvert::Core::Rewriter::Instance#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -356,7 +396,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#initialize-instance_method" title="Synvert::Core::Rewriter::Condition#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -364,7 +404,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#initialize-instance_method" title="Synvert::Core::Rewriter::RubyVersion#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -372,7 +412,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#initialize-instance_method" title="Synvert::Core::Rewriter::GotoScope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -380,7 +420,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#initialize-instance_method" title="Synvert::Core::Rewriter::WithinScope#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -388,7 +428,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#initialize-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#initialize (method)">#initialize</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -396,7 +436,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#insert-instance_method" title="Synvert::Core::Rewriter::Instance#insert (method)">#insert</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -404,7 +444,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#insert_after-instance_method" title="Synvert::Core::Rewriter::Instance#insert_after (method)">#insert_after</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -412,7 +452,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#insert_before-instance_method" title="Synvert::Core::Rewriter::Instance#insert_before (method)">#insert_before</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -420,7 +460,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#line-instance_method" title="Parser::AST::Node#line (method)">#line</a></span>
       <small>Parser::AST::Node</small>
@@ -428,7 +468,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#load_snippet-class_method" title="Synvert::Core::Utils.load_snippet (method)">load_snippet</a></span>
       <small>Synvert::Core::Utils</small>
@@ -436,7 +476,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#match%3F-instance_method" title="Synvert::Core::Rewriter::GemSpec#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -444,7 +484,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/RubyVersion.html#match%3F-instance_method" title="Synvert::Core::Rewriter::RubyVersion#match? (method)">#match?</a></span>
       <small>Synvert::Core::Rewriter::RubyVersion</small>
@@ -452,7 +492,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Warning.html#message-instance_method" title="Synvert::Core::Rewriter::Warning#message (method)">#message</a></span>
       <small>Synvert::Core::Rewriter::Warning</small>
@@ -460,7 +500,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#mutation_adapter-instance_method" title="Synvert::Core::Rewriter::Instance#mutation_adapter (method)">#mutation_adapter</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -468,7 +508,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#name-instance_method" title="Synvert::Core::Rewriter#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -476,7 +516,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#name-instance_method" title="Synvert::Core::Rewriter::GemSpec#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -484,7 +524,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#new_code-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#new_code (method)">#new_code</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -492,7 +532,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#node-instance_method" title="Synvert::Core::Rewriter::Instance#node (method)">#node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -500,7 +540,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#noop-instance_method" title="Synvert::Core::Rewriter::Instance#noop (method)">#noop</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -508,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#number_of_workers-class_method" title="Synvert::Core::Configuration.number_of_workers (method)">number_of_workers</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -516,7 +556,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#only_paths-class_method" title="Synvert::Core::Configuration.only_paths (method)">only_paths</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -524,7 +564,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#options-instance_method" title="Synvert::Core::Rewriter#options (method)">#options</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -532,7 +572,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#prepend-instance_method" title="Synvert::Core::Rewriter::Instance#prepend (method)">#prepend</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -540,7 +580,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process-instance_method" title="Synvert::Core::Rewriter#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -548,7 +588,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process-instance_method" title="Synvert::Core::Rewriter::Instance#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -556,7 +596,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#process-instance_method" title="Synvert::Core::Rewriter::Condition#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -564,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#process-instance_method" title="Synvert::Core::Rewriter::GotoScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -572,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#process-instance_method" title="Synvert::Core::Rewriter::WithinScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -580,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_node (method)">#process_with_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -588,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_other_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_other_node (method)">#process_with_other_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -596,7 +636,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process_with_sandbox-instance_method" title="Synvert::Core::Rewriter#process_with_sandbox (method)">#process_with_sandbox</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -604,10 +644,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#redo_until_no_change-instance_method" title="Synvert::Core::Rewriter#redo_until_no_change (method)">#redo_until_no_change</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Engine.html#register-class_method" title="Synvert::Core::Engine.register (method)">register</a></span>
+      <small>Synvert::Core::Engine</small>
     </div>
   </li>
   
