--- a/method_list.html
+++ b/method_list.html
@@ -134,8 +134,40 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#availables-class_method" title="Synvert::Core::Helper.availables (method)">availables</a></span>
+      <small>Synvert::Core::Helper</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#availables-class_method" title="Synvert::Core::Rewriter.availables (method)">availables</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#block-instance_method" title="Synvert::Core::Helper#block (method)">#block</a></span>
+      <small>Synvert::Core::Helper</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter.html#call_helper-instance_method" title="Synvert::Core::Rewriter#call_helper (method)">#call_helper</a></span>
+      <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#clear-class_method" title="Synvert::Core::Helper.clear (method)">clear</a></span>
+      <small>Synvert::Core::Helper</small>
     </div>
   </li>
   
@@ -230,13 +262,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#fetch-class_method" title="Synvert::Core::Helper.fetch (method)">fetch</a></span>
+      <small>Synvert::Core::Helper</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#fetch-class_method" title="Synvert::Core::Rewriter.fetch (method)">fetch</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#file_path-instance_method" title="Synvert::Core::Rewriter::Instance#file_path (method)">#file_path</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -244,7 +284,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Parser/AST/Node.html#filename-instance_method" title="Parser::AST::Node#filename (method)">#filename</a></span>
       <small>Parser::AST::Node</small>
@@ -252,7 +292,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#gem_spec-instance_method" title="Synvert::Core::Rewriter#gem_spec (method)">#gem_spec</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -260,7 +300,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine.html#generate_transform_proc-class_method" title="Synvert::Core::Engine.generate_transform_proc (method)">generate_transform_proc</a></span>
       <small>Synvert::Core::Engine</small>
@@ -268,7 +308,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#generate_transform_proc-class_method" title="Synvert::Core::Engine::Erb.generate_transform_proc (method)">generate_transform_proc</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -276,7 +316,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Elegant.html#generate_transform_proc-instance_method" title="Synvert::Core::Engine::Elegant#generate_transform_proc (method)">#generate_transform_proc</a></span>
       <small>Synvert::Core::Engine::Elegant</small>
@@ -284,7 +324,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#glob-class_method" title="Synvert::Core::Utils.glob (method)">glob</a></span>
       <small>Synvert::Core::Utils</small>
@@ -292,7 +332,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#goto_node-instance_method" title="Synvert::Core::Rewriter::Instance#goto_node (method)">#goto_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -300,7 +340,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#group-instance_method" title="Synvert::Core::Rewriter#group (method)">#group</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -308,7 +348,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper-instance_method" title="Synvert::Core::Rewriter#helper (method)">#helper</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -316,7 +356,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helper_method-instance_method" title="Synvert::Core::Rewriter#helper_method (method)">#helper_method</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -324,7 +364,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#helpers-instance_method" title="Synvert::Core::Rewriter#helpers (method)">#helpers</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -332,7 +372,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_exist_node (method)">#if_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -340,7 +380,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_gem-instance_method" title="Synvert::Core::Rewriter#if_gem (method)">#if_gem</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -348,7 +388,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#if_only_exist_node-instance_method" title="Synvert::Core::Rewriter::Instance#if_only_exist_node (method)">#if_only_exist_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -356,7 +396,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#if_ruby-instance_method" title="Synvert::Core::Rewriter#if_ruby (method)">#if_ruby</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -364,10 +404,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#indent-instance_method" title="Synvert::Core::Rewriter::Instance#indent (method)">#indent</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#initialize-instance_method" title="Synvert::Core::Helper#initialize (method)">#initialize</a></span>
+      <small>Synvert::Core::Helper</small>
     </div>
   </li>
   
@@ -534,13 +582,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#name-instance_method" title="Synvert::Core::Helper#name (method)">#name</a></span>
+      <small>Synvert::Core::Helper</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#name-instance_method" title="Synvert::Core::Rewriter#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GemSpec.html#name-instance_method" title="Synvert::Core::Rewriter::GemSpec#name (method)">#name</a></span>
       <small>Synvert::Core::Rewriter::GemSpec</small>
@@ -548,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/ReplaceErbStmtWithExprAction.html#new_code-instance_method" title="Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction#new_code (method)">#new_code</a></span>
       <small>Synvert::Core::Rewriter::ReplaceErbStmtWithExprAction</small>
@@ -556,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#node-instance_method" title="Synvert::Core::Rewriter::Instance#node (method)">#node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -564,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#noop-instance_method" title="Synvert::Core::Rewriter::Instance#noop (method)">#noop</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -572,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#number_of_workers-class_method" title="Synvert::Core::Configuration.number_of_workers (method)">number_of_workers</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -580,7 +636,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Configuration.html#only_paths-class_method" title="Synvert::Core::Configuration.only_paths (method)">only_paths</a></span>
       <small>Synvert::Core::Configuration</small>
@@ -588,7 +644,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#options-instance_method" title="Synvert::Core::Rewriter#options (method)">#options</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -596,7 +652,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#prepend-instance_method" title="Synvert::Core::Rewriter::Instance#prepend (method)">#prepend</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -604,7 +660,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process-instance_method" title="Synvert::Core::Rewriter#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -612,7 +668,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process-instance_method" title="Synvert::Core::Rewriter::Instance#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -620,7 +676,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Condition.html#process-instance_method" title="Synvert::Core::Rewriter::Condition#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::Condition</small>
@@ -628,7 +684,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/GotoScope.html#process-instance_method" title="Synvert::Core::Rewriter::GotoScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::GotoScope</small>
@@ -636,7 +692,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/WithinScope.html#process-instance_method" title="Synvert::Core::Rewriter::WithinScope#process (method)">#process</a></span>
       <small>Synvert::Core::Rewriter::WithinScope</small>
@@ -644,7 +700,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_node (method)">#process_with_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -652,7 +708,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#process_with_other_node-instance_method" title="Synvert::Core::Rewriter::Instance#process_with_other_node (method)">#process_with_other_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -660,7 +716,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#process_with_sandbox-instance_method" title="Synvert::Core::Rewriter#process_with_sandbox (method)">#process_with_sandbox</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -668,7 +724,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#redo_until_no_change-instance_method" title="Synvert::Core::Rewriter#redo_until_no_change (method)">#redo_until_no_change</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -676,10 +732,18 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine.html#register-class_method" title="Synvert::Core::Engine.register (method)">register</a></span>
       <small>Synvert::Core::Engine</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Helper.html#register-class_method" title="Synvert::Core::Helper.register (method)">register</a></span>
+      <small>Synvert::Core::Helper</small>
     </div>
   </li>
   
