--- a/method_list.html
+++ b/method_list.html
@@ -190,21 +190,13 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_mutation-instance_method" title="Synvert::Core::Rewriter::Instance#current_mutation (method)">#current_mutation</a></span>
-      <small>Synvert::Core::Rewriter::Instance</small>
-    </div>
-  </li>
-  
-
-  <li class="even ">
-    <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#current_node-instance_method" title="Synvert::Core::Rewriter::Instance#current_node (method)">#current_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#delete-instance_method" title="Synvert::Core::Rewriter::Instance#delete (method)">#delete</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -212,7 +204,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#description-instance_method" title="Synvert::Core::Rewriter#description (method)">#description</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -220,7 +212,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine.html#encode-class_method" title="Synvert::Core::Engine.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine</small>
@@ -228,7 +220,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#encode-class_method" title="Synvert::Core::Engine::Erb.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -236,7 +228,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Haml.html#encode-class_method" title="Synvert::Core::Engine::Haml.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Haml</small>
@@ -244,7 +236,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Slim.html#encode-class_method" title="Synvert::Core::Engine::Slim.encode (method)">encode</a></span>
       <small>Synvert::Core::Engine::Slim</small>
@@ -252,7 +244,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#eval_snippet-class_method" title="Synvert::Core::Utils.eval_snippet (method)">eval_snippet</a></span>
       <small>Synvert::Core::Utils</small>
@@ -260,7 +252,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Helper.html#fetch-class_method" title="Synvert::Core::Helper.fetch (method)">fetch</a></span>
       <small>Synvert::Core::Helper</small>
@@ -268,7 +260,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#fetch-class_method" title="Synvert::Core::Rewriter.fetch (method)">fetch</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -276,7 +268,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#file_path-instance_method" title="Synvert::Core::Rewriter::Instance#file_path (method)">#file_path</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -284,7 +276,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#gem_spec-instance_method" title="Synvert::Core::Rewriter#gem_spec (method)">#gem_spec</a></span>
       <small>Synvert::Core::Rewriter</small>
@@ -292,7 +284,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine.html#generate_transform_proc-class_method" title="Synvert::Core::Engine.generate_transform_proc (method)">generate_transform_proc</a></span>
       <small>Synvert::Core::Engine</small>
@@ -300,7 +292,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Erb.html#generate_transform_proc-class_method" title="Synvert::Core::Engine::Erb.generate_transform_proc (method)">generate_transform_proc</a></span>
       <small>Synvert::Core::Engine::Erb</small>
@@ -308,7 +300,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Engine/Elegant.html#generate_transform_proc-instance_method" title="Synvert::Core::Engine::Elegant#generate_transform_proc (method)">#generate_transform_proc</a></span>
       <small>Synvert::Core::Engine::Elegant</small>
@@ -316,7 +308,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Utils.html#glob-class_method" title="Synvert::Core::Utils.glob (method)">glob</a></span>
       <small>Synvert::Core::Utils</small>
@@ -324,7 +316,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#goto_node-instance_method" title="Synvert::Core::Rewriter::Instance#goto_node (method)">#goto_node</a></span>
       <small>Synvert::Core::Rewriter::Instance</small>
@@ -332,10 +324,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="Synvert/Core/Rewriter.html#group-instance_method" title="Synvert::Core::Rewriter#group (method)">#group</a></span>
       <small>Synvert::Core::Rewriter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="Synvert/Core/Rewriter/Instance.html#group-instance_method" title="Synvert::Core::Rewriter::Instance#group (method)">#group</a></span>
+      <small>Synvert::Core::Rewriter::Instance</small>
     </div>
   </li>
   
